ProjectHealthScore/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Contact_Health_Score__c</fullName>
        <type>Percent</type>
        <label>Contact Health Score</label>
        <precision>3</precision>
        <scale>2</scale>
    </fields>
</CustomObject>