ProjectHealthScore/main/default/objects/Contact/fields/Account_V3__c.field-meta.xml
<CustomField>
    <fullName>Account_V3__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account V3</label>
    <type>Text</type>
</CustomField>