ProjectHealthScore/main/default/objects/Contact/fields/Contact_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Contact_Health_Score__c</fullName>
    <label>Contact Health Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>